--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sparsh Lubricants | About :: SLPL</title>
+<link rel="icon" href="favicon.ico" type="image/ico" sizes="48x48"> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,9 +48,9 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li class="active"><a href="about.html">about</a></li>
-								<li><a href="news.html">news</a></li>
+								<li><a href="news.html">products</a></li>
 								<li><a href="services.html">services</a></li>
-								<li><a href="404.html">blog</a></li>
+								<li><a href="404.html">vendors</a></li>
 								<li><a href="contact.html">mail us</a></li>
 								<div class="clearfix"> </div>
 						</ul>
@@ -78,59 +79,59 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 			<div class="about">
 				<div class="col-md-8 about-data">
 					<div class="about-desc">
-						<h4>Lorem Ipsum is simply dummy</h4>
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum. </p>
-						<span>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</span> 
+						<h4>A Heritage of Specializing in Lubricants.</h4>
+						<p>Sparsh Lubricants has earned a solid reputation for offering high quality products and services that improve your business. How? By providing customer retention programs/products for Installers and products and services that increase equipment life and enhance the efficiency of all equipment whether it be Automotive, Heavy Duty Commercial, or Industrial in its application. </p>
+						<span></span> 
 					</div>	
 					<div class="about-img">
 						<a href="#"><img src="images/img2.jpg" class="img-responsive" alt=""></a>
 					</div>
 					<div class="clearfix"> </div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>							
+						<p>At Sparsh Lubricants, we take tremendous pride in providing the highest level of Service. When you call our toll free numbers you will be greeted by a staff that is knowledgeable and experienced in the various lubricants that we carry. Each customer service representative receives industry specific training on the latest advancements in lubrication technology including changing equipment and OEM requirements.</p>
+						<p>Sparsh Lubricants has exciting news! We have launched a new venture to BOLSTER our already comprehensive offer of Lubricants and DEF. We are proud to announce the availability of our new Supplemental Products catalogue. Our Supplemental Offer includes many quality name brand products: CRC, WD-40, etc.</p>							
 						<div class="rd_more">
 							<a href="#" class="btn  btn-1c">Read More...</a>	
 						</div>							
 				</div>
 				<div class="col-md-4 sidebar">
-					<h2>Recent Categories</h2>
+					<h2>Marketing & Sales</h2>
 						<div class="blog_posts">
 						  <div class="blog_desc">
 								<div class="blog_heading">
-									<p><span>Lorem ipsum dolor sit amet.</span></p>
-									<p class="date">Posted on May 13th, 2013 by <span class="author">Finibus</span> </p>
+									<p><span>Bhiwani, Haryana INDIA.</span></p>
+									<p class="date">Opened on April 1st, 2016 by <span class="author">Kuldeep LLP</span> </p>
 								 </div>	
-								<p>There are many variations of passages of Lorem Ipsum available, but the majority have,,</p>
+								<p>For Sales & Marketing queries, contact Mr. Kuldeep, phone: +91 (989) 177-5463</p>
 							  </div>
 							<div class="clearfix"> </div>
 						</div>	
 						<div class="blog_posts">
 							  <div class="blog_desc">
 									<div class="blog_heading">
-										<p><span>Lorem ipsum dolor sit amet.</span></p>
-										<p class="date">Posted on May 13th, 2013 by <span class="author">Finibus</span> </p>
+										<p><span>Kotputli, Rajasthan INDIA.</span></p>
+										<p class="date">Opened on December 1st, 2015 by <span class="author">Khatu Shyam Agency</span> </p>
 									 </div>	
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have,,</p>
+									<p>For Sales & Marketing queries, contact Ms. Poonam Lamba, phone: +91 (989) 177-5463</p>
 							  </div>
 							<div class="clearfix"> </div>
 						</div>	
 						<div class="blog_posts">
 								  <div class="blog_desc">
 									<div class="blog_heading">
-										<p><span>Lorem ipsum dolor sit amet.</span></p>
-										<p class="date">Posted on May 13th, 2013 by <span class="author">Finibus </span> </p>
+										<p><span>Jaipur, Rajasthan INDIA.</span></p>
+										<p class="date">Opened on March 12th, 2014 by <span class="author">Raj Lubricants </span> </p>
 									 </div>	
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have,,</p>
+									<p>For Sales & Marketing queries, contact Mr. Sparsh Punia, phone: +91 (989) 177-5463</p>
 							  </div>
 							<div class="clearfix"> </div>
 						</div>					       					
 						<div class="blog_posts">
 								  <div class="blog_desc">
 									<div class="blog_heading">
-										<p><span>Lorem ipsum dolor sit amet.</span></p>
-										<p class="date">Posted on May 13th, 2013 by <span class="author">Finibus</span> </p>
+										<p><span>Jhajjar, Haryana INDIA.</span></p>
+										<p class="date">Opened on May 13th, 2013 by <span class="author">Sparsh Lubricants - Jhajjar</span> </p>
 									 </div>	
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have,,</p>
+									<p>For Sales & Marketing queries, contact Mr. Sandeep <Punia></Punia>, phone: +91 (989) 177-5463</p>
 							  </div>
 							 <div class="clearfix"> </div>	
 						</div>	
@@ -167,66 +168,6 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 					</div>
 					<div class="data">
 						<p>10-765 mg-Road,
-							Washington, DC, United States,
-							ud-19832-6578.</p>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="addr-1">
-					<div class="icon">
-						<i class="mob"> </i>
-					</div>
-					<div class="data">
-						<p>+(123) 456-789-1234</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-4 footer-right">
-					<div class="logo-1">
-						<a href="index.html"><img src="images/logo1.png" class="img-responsive" alt="" /></a>
-					</div>
-					<div class="social">
-						<ul>
-							<li><a href="#"><i class="facebok"> </i></a></li>
-							<li><a href="#"><i class="twiter"> </i></a></li>
-							<li><a href="#"><i class="drible"> </i></a></li>
-							<li><a href="#"><i class="in"> </i></a></li>
-								<div class="clearfix"></div>	
-						</ul>
-					</div>
-			</div>
-				<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="col-md-5 footer-left">
-				<h4>Stay in touch</h4>
-				<div class="stay">
-					<div class="stay-left">
-						<form>
-							<input type="text" placeholder="" required="">
-						</form>
-					</div>
-					<div class="button">
-						<form>
-							<input type="submit" value="Sign up">
-						</form>
-					</div>
-						<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-3 footer-middle">
-				<h4>Address</h4>
-				<div class="addr">
-					<div class="icon">
-						<i class="top"> </i>
-					</div>
-					<div class="data">
-						<p>10-765 mg-Road,
 							Gurgaon, HR, India,
 							PIN 122-007.</p>
 					</div>
@@ -237,68 +178,8 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 						<i class="mob"> </i>
 					</div>
 					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-4 footer-right">
-					<div class="logo-1">
-						<a href="index.html"><img src="images/logo1.png" class="img-responsive" alt="" /></a>
-					</div>
-					<div class="social">
-						<ul>
-							<li><a href="#"><i class="facebok"> </i></a></li>
-							<li><a href="#"><i class="twiter"> </i></a></li>
-							<li><a href="#"><i class="drible"> </i></a></li>
-							<li><a href="#"><i class="in"> </i></a></li>
-								<div class="clearfix"></div>	
-						</ul>
-					</div>
-			</div>
-				<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="col-md-5 footer-left">
-				<h4>Stay in touch</h4>
-				<div class="stay">
-					<div class="stay-left">
-						<form>
-							<input type="text" placeholder="" required="">
-						</form>
-					</div>
-					<div class="button">
-						<form>
-							<input type="submit" value="Sign up">
-						</form>
-					</div>
-						<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-3 footer-middle">
-				<h4>Address</h4>
-				<div class="addr">
-					<div class="icon">
-						<i class="top"> </i>
-					</div>
-					<div class="data">
-						<p>10-765 mg-Road,
-							Gurgaon, HR, India,
-							PIN 122-007.</p>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="addr-1">
-					<div class="icon">
-						<i class="mob"> </i>
-					</div>
-					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
+						<p>+91 (989) 177-5463</p>
+						<h6>E-mail : <a href="mailto:info@sparshlubicants.com">info@sparshlubicants.com</a></h6>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -324,7 +205,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 <!-- footer-bottom -->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>© 2015 All rights reserved | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
+			<p>©Sparsh Lubricants, 2016 | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
 		</div>
 	</div>
 <!-- footer-bottom -->
