--- a/account.html
+++ b/account.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sparsh Lubricants | Account :: SLPL</title>
+<link rel="icon" href="favicon.ico" type="image/ico" sizes="48x48"> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,9 +48,9 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">about</a></li>
-								<li><a href="news.html">news</a></li>
+								<li><a href="news.html">products</a></li>
 								<li><a href="services.html">services</a></li>
-								<li><a href="404.html">blog</a></li>
+								<li><a href="404.html">vendors</a></li>
 								<li><a href="contact.html">mail us</a></li>
 								<div class="clearfix"> </div>
 						</ul>
@@ -79,7 +80,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 				<div class="col_1_of_account span_1_of_account">
 					<h4 class="title">New Customers</h4>
 					<h5 class="sub_title">Register Account</h5>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan</p>
+					<p>The Sparsh Total Enrollment Program (STEP) is a free service to allow customers and vendors to enroll their lubricant needs with the nearest Sparsh Lubricant Agency. It keeps you informed and helps the Embassy locate you at the time of delivery of your Sparsh Product. Benefits of Enrolling in STEP: Receive important information from the Sparsh about products and launches, helping you make informed decisions about your lubricant usage. Help the Sparsh Agency contact you in a delivery, whether local, outstation, or wholesale. Help vendors and suppliers get in touch with you in an urgency. Sign up today to receive email update on products and services available in India.</p>
 					<div class="button1">
 					   <a href="register.html"><input type="submit" name="Submit" value="Continue"></a>
 					 </div>
@@ -143,66 +144,6 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 					</div>
 					<div class="data">
 						<p>10-765 mg-Road,
-							Washington, DC, United States,
-							ud-19832-6578.</p>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="addr-1">
-					<div class="icon">
-						<i class="mob"> </i>
-					</div>
-					<div class="data">
-						<p>+(123) 456-789-1234</p>
-					<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-4 footer-right">
-					<div class="logo-1">
-						<a href="index.html"><img src="images/logo1.png" class="img-responsive" alt="" /></a>
-					</div>
-					<div class="social">
-						<ul>
-							<li><a href="#"><i class="facebok"> </i></a></li>
-							<li><a href="#"><i class="twiter"> </i></a></li>
-							<li><a href="#"><i class="drible"> </i></a></li>
-							<li><a href="#"><i class="in"> </i></a></li>
-								<div class="clearfix"></div>	
-						</ul>
-					</div>
-			</div>
-				<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="col-md-5 footer-left">
-				<h4>Stay in touch</h4>
-				<div class="stay">
-					<div class="stay-left">
-						<form>
-							<input type="text" placeholder="" required="">
-						</form>
-					</div>
-					<div class="button">
-						<form>
-							<input type="submit" value="Sign up">
-						</form>
-					</div>
-						<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-3 footer-middle">
-				<h4>Address</h4>
-				<div class="addr">
-					<div class="icon">
-						<i class="top"> </i>
-					</div>
-					<div class="data">
-						<p>10-765 mg-Road,
 							Gurgaon, HR, India,
 							PIN 122-007.</p>
 					</div>
@@ -213,68 +154,8 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 						<i class="mob"> </i>
 					</div>
 					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-4 footer-right">
-					<div class="logo-1">
-						<a href="index.html"><img src="images/logo1.png" class="img-responsive" alt="" /></a>
-					</div>
-					<div class="social">
-						<ul>
-							<li><a href="#"><i class="facebok"> </i></a></li>
-							<li><a href="#"><i class="twiter"> </i></a></li>
-							<li><a href="#"><i class="drible"> </i></a></li>
-							<li><a href="#"><i class="in"> </i></a></li>
-								<div class="clearfix"></div>	
-						</ul>
-					</div>
-			</div>
-				<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="col-md-5 footer-left">
-				<h4>Stay in touch</h4>
-				<div class="stay">
-					<div class="stay-left">
-						<form>
-							<input type="text" placeholder="" required="">
-						</form>
-					</div>
-					<div class="button">
-						<form>
-							<input type="submit" value="Sign up">
-						</form>
-					</div>
-						<div class="clearfix"> </div>
-				</div>
-			</div>
-			<div class="col-md-3 footer-middle">
-				<h4>Address</h4>
-				<div class="addr">
-					<div class="icon">
-						<i class="top"> </i>
-					</div>
-					<div class="data">
-						<p>10-765 mg-Road,
-							Gurgaon, HR, India,
-							PIN 122-007.</p>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="addr-1">
-					<div class="icon">
-						<i class="mob"> </i>
-					</div>
-					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
+						<p>+91 (989) 177-5463</p>
+						<h6>E-mail : <a href="mailto:info@sparshlubicants.com">info@sparshlubicants.com</a></h6>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -300,7 +181,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 <!-- footer-bottom -->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>© 2015 All rights reserved | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
+			<p>©Sparsh Lubricants, 2016 | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
 		</div>
 	</div>
 <!-- footer-bottom -->
