--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sparsh Lubricants | Contact :: SLPL</title>
+<link rel="icon" href="favicon.ico" type="image/ico" sizes="48x48"> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,9 +66,9 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">about</a></li>
-								<li><a href="news.html">news</a></li>
+								<li><a href="news.html">products</a></li>
 								<li><a href="services.html">services</a></li>
-								<li><a href="404.html">blog</a></li>
+								<li><a href="404.html">vendors</a></li>
 								<li class="active"><a href="contact.html">mail us</a></li>
 								<div class="clearfix"> </div>
 						</ul>
@@ -103,12 +104,12 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
       				</div>
       			<div class="company_address">
 				     	<h3>Company Information :</h3>
-						<p>500 Lorem Ipsum Dolor Sit,</p>
-						<p>22-56-2-9 Sit Amet, Lorem,</p>
-						<p>USA</p>
-				   		<p>Phone:(00) 222 666 444</p>
-				   		<p>Fax: (000) 000 00 00 0</p>
-				 	 	<p>Email: <span>info(at)mycompany.com</span></p>
+						<p>Plot# 121, Left Lane Street </p>
+						<p>Sector 9A, Gurgaon, Haryana,</p>
+						<p>INDIA</p>
+				   		<p>Phone: +91 (989) 177-5463</p>
+				   		<p>Fax: +91 (989) 177-5463</p>
+				 	 	<p>Email: <span>info@sparshlubricants.com</span></p>
 				   		<p>Follow on: <span>Facebook</span>, <span>Twitter</span></p>
 				   </div>
 				</div>				
@@ -181,8 +182,8 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 						<i class="mob"> </i>
 					</div>
 					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
+						<p>+91 (989) 177-5463</p>
+						<h6>E-mail : <a href="mailto:info@sparshlubicants.com">info@sparshlubicants.com</a></h6>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -208,7 +209,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 <!-- footer-bottom -->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>© 2015 All rights reserved | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
+			<p>©Sparsh Lubricants, 2016 | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
 		</div>
 	</div>
 <!-- footer-bottom -->
