--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sparsh Lubricants | Home :: SLPL</title>
+<link rel="icon" href="favicon.ico" type="image/ico" sizes="48x48"> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,9 +48,9 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li><a href="about.html">about</a></li>
-								<li><a href="news.html">news</a></li>
+								<li><a href="news.html">products</a></li>
 								<li><a href="services.html">services</a></li>
-								<li><a href="404.html">blog</a></li>
+								<li><a href="404.html">vendors</a></li>
 								<li><a href="contact.html">mail us</a></li>
 								<div class="clearfix"> </div>
 						</ul>
@@ -127,10 +128,10 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 		<div class="container">
 			<h2>Welcome!</h2>
 			<h6>Sparsh Lubricants is a proud supporter of the Petroleum Quality Institute of India.</h6>
-			<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-				reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-				sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Quality control testing is performed to accepted industry standards, including ASTM, ISO, IP, DIN, NOM, and many other 
+				international protocols. QC test results are promptly reported to clients, enabling decision makers to make 
+				rapid and informed decisions. Should quality issues arise, Intertek laboratories are well staffed and equipped 
+				to perform troubleshooting and investigative analysis to help determine quality problems and root cause.</p>
 		</div>
 	</div>
 <!-- welcome -->
@@ -138,31 +139,34 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 	<div class="wedo">
 		<div class="container">
 			<h2>What we do</h2>
-			<h6>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod 
-				tempor incididunt ut labore et dolore magna aliqua. </h6>
+			<h6>Our diesel fuels are blended to provide good ignition quality and are held to high quality standards for our customers.
+				Our gasolines meet TOP TIER Detergent Gasoline standards. The gasolines we sell  have been developed on a molecular 
+				level to help clean up intake valves and help keep vital engine parts like fuel injectors clean. </h6>
 					<div class="wha-top">
 						<div class="col-md-4 wha-top1">
 							<img src="images/img1.jpg" class="img-responsive" alt="">
-							<h4>Maecenas aliquam nec odio vel pretium dictum orci vitae enim dapibus</h4>
-							<p>Aenean pulvinar elit eget dictum congue. Ut inter
-								dum mauris quis euismod convallis. Cras tempus 
-								ante nulla, et efficitur odio luctus non.</p>	
+							<h4>Full support for sparsh lubes procurement and excellent customer service.</h4>
+							<p>Every automobile’s needs for best lubricants are unique and critical to optimizing engine performance. 
+								Determine the best lubes product options based on lifting patterns and emissions regulations. 
+								Provide cost savings through competitive pricing, enabled by leveraging our global lubes volume and strategic purchasing.</p>	
 							<a href="#" class="btn  btn-1c">Read More...</a>	
 						</div>
 						<div class="col-md-4 wha-top1">
 							<img src="images/img2.jpg" class="img-responsive" alt="">
-							<h4>Pellentesque rutrum accumsan blandit Sed tortor magna, scelerisque congue.</h4>
-							<p>Aenean pulvinar elit eget dictum congue. Ut inter
-								dum mauris quis euismod convallis. Cras tempus 
-								ante nulla, et efficitur odio luctus non.</p>		
+							<h4>Safety and operational excellence. Get World Class Products at your doorsteps.</h4>
+							<p>As a physical distributor of sparsh lubricants across the globe, we require the highest health, 
+								safety and environmental (HSE) standards from our selected partners and are committed to safe 
+								working practices. Our expert sparsh technical support team delivers outstanding technical support 
+								for sparsh lubes. </p>		
 							<a href="#" class="btn  btn-1c">Read More...</a>	
 						</div>
 						<div class="col-md-4 wha-top1">
 							<img src="images/img3.jpg" class="img-responsive" alt="">
-							<h4>Curabitur vitae auctor mi. Vestibulum gravida molestie arcu ac maximus. </h4>
-							<p>Aenean pulvinar elit eget dictum congue. Ut inter
-								dum mauris quis euismod convallis. Cras tempus 
-								ante nulla, et efficitur odio luctus non.</p>		
+							<h4>A Heritage of Specializing in Lubricants. For over 40 years. Again, and again! and again!</h4>
+							<p>Sparsh Lubricants has earned a solid reputation for offering high quality products and services that improve 
+								your business. How? By providing customer retention programs/products and 
+								services that increase equipment life and enhance the efficiency of all equipment whether it be  
+								Commercial, or Industrial in its application.</p>		
 							<a href="#" class="btn  btn-1c">Read More...</a>
 						</div>
 							<div class="clearfix"> </div>
@@ -174,10 +178,10 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 	<div class="midbann">
 		<div class="container">
 			<div class="col-md-9 midbann-left">
-				<h3>Pellentesque rutrum acsa blandit tortor !</h3>
-				<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et 
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-				ex ea commodo consequat. Duis aute irure dolor in reprehenderi.</p>
+				<h3>Take advantage of our knowledge resources and educational offerings starting today !</h3>
+				<p>Best practices and more. Sparsh Lubricants is here to help you and your organization achieve vital goals. As 
+					we work with global customers on some of their most difficult challenges, our experts are well-positioned 
+					to share what they learn about best practices through a variety of platforms.</p>
 			</div>
 			<div class="col-md-3 midbann-right">
 				<a class="read" href="#">Read More</a>	
@@ -190,21 +194,21 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 	<div class="maecenas">
 		<div class="container">
 			<div class="col-md-6 maecenas-left">
-				<h4>Maecenas aliquam nec odio </h4>
-				<h6>Aenean pulvinar elit eget dictum congue</h6>
-				<p>Aenean pulvinar elit eget dictum congue. Ut interdum mauris quis euismod 
-					convallis. Cras tempus ante nulla, et efficitur odio luctus non. Vestibulum 
-					consequat interdum elit nam nec commodo lorem.Nulla facilisi. Pellentesque 
-					id nulla nisi.</p>
+				<h4>Become our franchisee member </h4>
+				<h6>Want to join the Lubricant Oil Revolution in India?</h6>
+				<p>At Sparsh Lubricant Company, our goal is to help you increase product margins through 
+					dedicated sales and marketing support. Whether you are a franchise car dealership, 
+					independent workshop or parts centre, we have the products and support to help your 
+					business be more profitable.</p>
 				<a href="#" class="btn  btn-1c">Read More...</a>
 			</div>
 			<div class="col-md-6 maecenas-right">
-				<h4>Cras congue diam lacus lectus</h4>
-				<h6>Aenean pulvinar elit eget dictum congue</h6>
-				<p>Aenean pulvinar elit eget dictum congue. Ut interdum mauris quis euismod 
-					convallis. Cras tempus ante nulla, et efficitur odio luctus non. Vestibulum 
-					consequat interdum elit nam nec commodo lorem.Nulla facilisi. Pellentesque 
-					id nulla nisi.</p>
+				<h4>Engine Oil Products and Break Lubricants</h4>
+				<h6>We serve all your needs. Anytime. Anywhere.</h6>
+				<p>Sprash-M01 is the world's leading synthetic engine oil. The high performance synthetic base oils 
+					that are used are just one reason for the exceptional product performance. We supply 
+					the various ranges of automotive manufacturer and industry approved passenger vehicle engine 
+					oils to car dealers and automotive workshops throughout the INDIA.</p>
 				<a href="#" class="btn  btn-1c">Read More...</a>
 			</div>
 				<div class="clearfix"> </div>
@@ -248,8 +252,8 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 						<i class="mob"> </i>
 					</div>
 					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
+						<p>+91 (989) 177-5463</p>
+						<h6>E-mail : <a href="mailto:info@sparshlubicants.com">info@sparshlubicants.com</a></h6>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -275,7 +279,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 <!-- footer-bottom -->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>© 2015 All rights reserved | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
+			<p>©Sparsh Lubricants, 2016 | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
 		</div>
 	</div>
 <!-- footer-bottom -->
