--- a/news.html
+++ b/news.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sparsh Lubricants | News :: SLPL</title>
+<link rel="icon" href="favicon.ico" type="image/ico" sizes="48x48"> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,9 +66,9 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">about</a></li>
-								<li class="active"><a href="news.html">news</a></li>
+								<li class="active"><a href="news.html">products</a></li>
 								<li><a href="services.html">services</a></li>
-								<li><a href="404.html">blog</a></li>
+								<li><a href="404.html">vendors</a></li>
 								<li><a href="contact.html">mail us</a></li>
 								<div class="clearfix"> </div>
 						</ul>
@@ -94,39 +95,52 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 		<div class="container">
 		<!-- news -->
 		<div class="news">
-			<h3>LATEST NEWS</h3>
+			<h3>LATEST PRODUCTS</h3>
 			<!-- container -->
 			<div class="container">
 				<div class="news-grids">
 					<div class="col-md-4 news-grid">
 						<div class="news-grid-text">
-							<h4>LOREM IPSUM DOLOR SIT</h4>
-							<span>10.00 - 12.00 | sep 24,2014</span>
+							<h4>SPARSH LUBRICANT</h4>
+							<span>SL-OIL-101  | 10 Bottles per pack</span>
 						</div>
-						<img src="images/img2.jpg" class="img-responsive" alt="" />
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+						<img src="images/product1.jpg" class="img-responsive" alt="" />
+						<p>High efficiency cleaning ability, reducing carbon deposit, keeping engine clean and reducing wear of engine. 
+							Excellent viscosity and temperature properties, providing outstanding viscosity maintaining ability 
+							and keeping little change of viscosity in service. Good TBN retention with strong anti-corrosion ability as 
+							well as excellent anti-oxidation ability at high temperature and large load.</p>
 						<div class="read-more blue">
 							<a href="#">Read More &gt;&gt;</a>
 						</div>
 					</div>
 					<div class="col-md-4 news-grid">
 						<div class="news-grid-text">
-							<h4>LOREM IPSUM DOLOR SIT</h4>
-							<span>8.00 - 10.00 | JUN 09,2014</span>
+							<h4>SPARSH ENGINE OIL</h4>
+							<span>SL-OIL-120  | 12 Bottles per pack</span>
 						</div>
-						<img src="images/img5.jpg" class="img-responsive" alt="" />
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+						<img src="images/product2.jpg" class="img-responsive" alt="" />
+						<p>Features
+							Outstanding anti-wear performance, effectively reducing wear between moving parts, and maximize parts working life
+							Good high temperature stability, oxidation resistance, maximize oil service life.
+							Outstanding clean dispersion performance, prevent coke, sludge formation.
+							Imports additive, effectively reducing oil consumption.
+							Good material compatibility preventing leakage.</p>
 						<div class="read-more blue">
 							<a href="#">Read More &gt;&gt;</a>
 						</div>
 					</div>
 					<div class="col-md-4 news-grid">
 						<div class="news-grid-text">
-							<h4>LOREM IPSUM DOLOR SIT</h4>
-							<span>9.00 - 10.00 | FEB 15,2014</span>
+							<h4>SPARSH BRAKE OIL</h4>
+							<span>SL-OIL-110  | 5 Bottles per pack</span>
 						</div>
-						<img src="images/img8.jpg" class="img-responsive" alt="" />
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+						<img src="images/product3.jpg" class="img-responsive" alt="" />
+						<p>Sprash High Quality Lubricant DOT3 DOT4 250ml 500ml  Brake Fluid. 
+							Gafle Brake fluid DOT3 meets or exceeds the standards of SAE J1703, FMVSS NO. 116 DOT3, ISO 4925 and GB12981 HZY3. 
+							Good fluidity at low temperature, little evaporation loss, good air resistance ability at high temperature. 
+							No corrosion to metal parts, compatible with rubber, suitable for hydraulic brake system of all kinds of automobiles. 
+							Can be mixed up with other brand brake fluid dot3.Adopting high efficiency anti-wear agent, maintaining effective 
+							anti-wear ability and prolonging service life of engine. </p>
 						<div class="read-more blue">
 							<a href="#">Read More &gt;&gt;</a>
 						</div>
@@ -136,32 +150,39 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 			</div>
 			<!-- //container -->
 			<div class="latest-events">
+				<h3>FEATURED PRODUCTS</h3>
 				<!-- container -->
 				<div class="container">
 					<div class="news-grids">
 					<div class="col-md-4 news-grid">
 						<div class="news-grid-text">
-							<span>10.00 - 12.00 | sep 24,2014</span>
+							<span>Sparsh Tractor Oil | 5 Ltr pack</span>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+						<p>ISO 4423 and GB55981 HZY4. 
+							Good fluidity at low temperature, little evaporation loss, good air resistance ability at high 
+							temperature.</p>
 						<div class="read-more blue">
 							<a href="#">Read More &gt;&gt;</a>
 						</div>
 					</div>
 					<div class="col-md-4 news-grid">
 						<div class="news-grid-text">
-							<span>8.00 - 10.00 | JUN 09,2014</span>
+							<span>Sparsh Truck Oil | 7 Ltr Pack</span>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+						<p>ISO 4900 and GB12551 HZY5. 
+							Good fluidity at low temperature, little evaporation loss, good air resistance ability at high 
+							temperature.</p>
 						<div class="read-more blue">
 							<a href="#">Read More &gt;&gt;</a>
 						</div>
 					</div>
 					<div class="col-md-4 news-grid">
 						<div class="news-grid-text">
-							<span>9.00 - 10.00 | FEB 15,2014</span>
+							<span>Sparsh Auto Oil | 1/2 Ltr pack</span>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+						<p>ISO 4005 and GB12955 HZY6. 
+							Good fluidity at low temperature, little evaporation loss, good air resistance ability at high 
+							temperature.</p>
 						<div class="read-more blue">
 							<a href="#">Read More &gt;&gt;</a>
 						</div>
@@ -213,8 +234,8 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 						<i class="mob"> </i>
 					</div>
 					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
+						<p>+91 (989) 177-5463</p>
+						<h6>E-mail : <a href="mailto:info@sparshlubicants.com">info@sparshlubicants.com</a></h6>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -240,7 +261,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 <!-- footer-bottom -->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>© 2015 All rights reserved | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
+			<p>©Sparsh Lubricants, 2016 | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
 		</div>
 	</div>
 <!-- footer-bottom -->
