--- a/services.html
+++ b/services.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sparsh Lubricants | Services :: SLPL</title>
+<link rel="icon" href="favicon.ico" type="image/ico" sizes="48x48"> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,9 +66,9 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">about</a></li>
-								<li><a href="news.html">news</a></li>
+								<li><a href="news.html">products</a></li>
 								<li class="active"><a href="services.html">services</a></li>
-								<li><a href="404.html">blog</a></li>
+								<li><a href="404.html">vendors</a></li>
 								<li><a href="contact.html">mail us</a></li>
 								<div class="clearfix"> </div>
 						</ul>
@@ -99,56 +100,60 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 				<ul class="lb-album">
 					<li>
 						<a href="#image-1">
-							<img src="images/img4.jpg" class="img-responsive" alt="">
+							<img src="images/service1.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>Onsite Delivery</h3>
 						<div class="lb-overlay" id="image-1">
-							<img src="images/img4.jpg" class="img-responsive" alt="">
+							<img src="images/service1.jpg" class="img-responsive" alt="">
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>We prefer coming to your doorsteps. So we deliver right at your service location or anywhere else do you...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
 					</li>
 					<li>
 						<a href="#image-2">
-							<img src="images/img5.jpg" class="img-responsive" alt="">
+							<img src="images/service2.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>24x7 Customer Care</h3>
 						<div class="lb-overlay" id="image-2">
-								<img src="images/img5.jpg" class="img-responsive" alt=""> 
+								<img src="images/service2.jpg" class="img-responsive" alt=""> 
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>Recently launched our 24x7 customer service. Want to talk to an customer care executive, send online query, or...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
 					</li>
 					<li>
 						<a href="#image-3">
-							<img src="images/img6.jpg" class="img-responsive" alt="">
+							<img src="images/service3.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>Secure Payments</h3>
 						<div class="lb-overlay" id="image-3">
-							<img src="images/img6.jpg" class="img-responsive" alt="image03">
+							<img src="images/service3.jpg" class="img-responsive" alt="image03">
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>In this world of internet speed allow trustworthy onlie payment methods. Get instant transfer to your bank...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
 					</li>
 					<li>
 						<a href="#image-4">
-							<img src="images/img7.jpg" class="img-responsive" alt="">
+							<img src="images/service4.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>Credit Quote</h3>
 						<div class="lb-overlay" id="image-4">
-							<img src="images/img7.jpg" class="img-responsive" alt="image04">
+							<img src="images/service4.jpg" class="img-responsive" alt="image04">
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>Become member of our sales team and have youself put on our prefferred list of Credit Worthiness Clients...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
@@ -157,56 +162,60 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 				<ul class="lb-album">
 					<li>
 						<a href="#image-5">
-							<img src="images/img8.jpg" class="img-responsive" alt="">
+							<img src="images/service5.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>Historical Transactions</h3>
 						<div class="lb-overlay" id="image-5">
-							<img src="images/img8.jpg" class="img-responsive" alt="image05">
+							<img src="images/service5.jpg" class="img-responsive" alt="image05">
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>Now get access to complete list of historical data. Be it related to sales, payments, balances, or any past information...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
 					</li>
 					<li>
 						<a href="#image-6">
-							<img src="images/img3.jpg" class="img-responsive" alt="">
+							<img src="images/service6.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>Inventory Manager</h3>
 						<div class="lb-overlay" id="image-6">
-							<img src="images/img3.jpg" class="img-responsive" alt="image06">
+							<img src="images/service6.jpg" class="img-responsive" alt="image06">
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>Bogged down by keeping track of supplies, sales, payments, credits etc? Worry No More! Our latest additon of ...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
 					</li>
 					<li>
 						<a href="#image-7">
-							<img src="images/img4.jpg" class="img-responsive" alt="">
+							<img src="images/service7.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>Online Marketing</h3>
 						<div class="lb-overlay" id="image-7">
-							<img src="images/img4.jpg" class="img-responsive" alt="image07"> 
+							<img src="images/service7.jpg" class="img-responsive" alt="image07"> 
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>Being a part of our sales network is not merely one sided affair. You will get a whole package of marketing data along...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
 					</li>
 					<li>
 						<a href="#image-8">
-							<img src="images/img2.jpg" class="img-responsive" alt="">
+							<img src="images/service8.jpg" class="img-responsive" alt="">
 							<span> </span>
 						</a>
+						<h3>Grievence Redressal</h3>
 						<div class="lb-overlay" id="image-8">
-							<img src="images/img2.jpg" class="img-responsive" alt="image08">
+							<img src="images/service8.jpg" class="img-responsive" alt="image08">
 							<a href="#page" class="lb-close"> </a>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>We take feedback very seriously, and positively. Our new grievience redressal service lets the customers and vendors reach...</p>
 				<div class="rd_more">
 					<a href="#" class="btn  btn-1c">Read More...</a>	
 				</div>
@@ -256,8 +265,8 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 						<i class="mob"> </i>
 					</div>
 					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
+						<p>+91 (989) 177-5463</p>
+						<h6>E-mail : <a href="mailto:info@sparshlubicants.com">info@sparshlubicants.com</a></h6>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -283,7 +292,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 <!-- footer-bottom -->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>© 2015 All rights reserved | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
+			<p>©Sparsh Lubricants, 2016 | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
 		</div>
 	</div>
 <!-- footer-bottom -->
