--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sparsh Lubricants | Login :: SLPL</title>
+<link rel="icon" href="favicon.ico" type="image/ico" sizes="48x48"> 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,9 +48,9 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">about</a></li>
-								<li><a href="news.html">news</a></li>
+								<li><a href="news.html">products</a></li>
 								<li><a href="services.html">services</a></li>
-								<li><a href="404.html">blog</a></li>
+								<li><a href="404.html">vendors</a></li>
 								<li><a href="contact.html">mail us</a></li>
 								<div class="clearfix"> </div>
 						</ul>
@@ -140,8 +141,8 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 						<i class="mob"> </i>
 					</div>
 					<div class="data">
-						<p>+91 (989)-177-5463</p>
-						<h6>E-mail : <a href="mailto:info@company.com">example@mail.com</a></h6>
+						<p>+91 (989) 177-5463</p>
+						<h6>E-mail : <a href="mailto:info@sparshlubicants.com">info@sparshlubicants.com</a></h6>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -167,7 +168,7 @@ Lubricants in India, Best Lubricant, Automobile Oil, Mobil Oil, Automative, Cust
 <!-- footer-bottom -->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>© 2015 All rights reserved | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
+			<p>©Sparsh Lubricants, 2016 | Design by <a href="http://amreshkadian.com/">Amresh Kadian</a></p>
 		</div>
 	</div>
 <!-- footer-bottom -->
